--- a/42_STLStack/42_STLStack.vcxproj
+++ b/42_STLStack/42_STLStack.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1ed3cbc8-783c-432f-b791-8a751c44b556}</ProjectGuid>
     <RootNamespace>My42STLStack</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>38_STLStack</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
