--- a/44_Functional/44_Functional.vcxproj
+++ b/44_Functional/44_Functional.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{20c53fc4-0c6b-4414-986d-4a7838446fb5}</ProjectGuid>
     <RootNamespace>My44Functional</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>40_Functional</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
